test_files/netlist_validation/invalid/invalid_01.net
V1 N001 0 12
R1OUT N001 5k
R2 OUT 0 1k
.tf V(OUT) V1
.backanno
.end
